# ForecastingTool

./: .gitignore  Cargo.toml  README.md  build.rs
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml
Requirements/: refactor_recommendations.md  requirements.md
Requirements/prompts/: burndown-chart.md  simulation-gantt.md  sorted_projects.md
docs/: book.toml
docs/src/: SUMMARY.md  cli-reference.md  installation.md  introduction.md  project-yaml-format.md  quickstart.md  troubleshooting.md  workflows.md
src/: lib.rs  main.rs  test_support.rs
src/commands/: base_commands.rs  date_parsing.rs  get_project_cmd.rs  get_throughput_cmd.rs  mod.rs  plot_burndown_cmd.rs  plot_gantt_cmd.rs  plot_project_cmd.rs  plot_simulation_gantt_cmd.rs  plot_throughput_cmd.rs  report_format.rs  simulate_cmd.rs  simulate_n_cmd.rs
src/domain/: calendar.rs  epic.rs  estimate.rs  issue.rs  issue_status.rs  mod.rs  project.rs  throughput.rs
src/services/: beta_pert_sampler.rs  burndown_plot.rs  burndown_plot_rendering.rs  burndown_plot_tests.rs  data_converter.rs  data_source.rs  estimate_duration.rs  estimate_gantt.rs  gantt_diagram.rs  histogram.rs  jira_api.rs  mileston_plot.rs  mod.rs  percentiles.rs  project_factory.rs  project_flow_diagram.rs  project_simulation.rs  (+9 more)
tests/: cli.rs  completions_tests.rs  get_project_tests.rs  get_throughput_tests.rs  plot_burndown_tests.rs  plot_gantt_tests.rs  plot_project_tests.rs  plot_simulation_gantt_tests.rs  plot_throughput.rs  simulate_by_throughput.rs  simulate_project_tests.rs  team_calendar_yaml_tests.rs
(+28 files in other folders)
