[package]
name = "forecasts"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
thiserror = "2.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rand = "0.8"
rand_distr = "0.4"
plotters = "0.3"
petgraph = "0.6"

[dev-dependencies]
assert_cmd = "2.1"
assert_fs = "1.1"
predicates = "3.1"
tokio = { version = "1.38", features = ["full"] }
warp = "0.3"
